<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">乐创家</string>
    <string name="vistion">1.4.2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="jxb_register_dialog_pwerror">邀请码输入有误，请重新输入</string>
    <string name="jxb_register_dialog_pwerror_again">再试一次</string>
    <string name="check_network">请检查您的网络是否打开</string>
    <string name="cancesl">取消</string>
    <string name="confirm">确定</string>
    <string name="checking">检查</string>
    <string name="check_sd">请检查内存卡</string>
    <string name="jxb_tab_credit">课程</string>
    <string name="jxb_tab_contact">发现</string>
    <string name="jxb_tab_home">家</string>
    <string name="jxb_tab_me">我</string>
    <string name="exit">再按一次退出程序</string>
    <string name="checkinstill">未安装播放插件,您将不能使用该软件。</string>
    <string name="install">安装</string>
    <string name="uninstall">关闭应用</string>
    <string name="aboutme">关于我们</string>
    <string name="studyrecord">学习记录</string>
    <string name="mbean">我的乐豆</string>
    <string name="allclass">我的课程</string>
    <string name="uploading">上传作品</string>
    <string name="usericon">头像</string>
    <string name="username">姓名</string>
    <string name="region">地区</string>
    <string name="birthday">生日</string>
    <string name="trainingAid">教具</string>
    <string name="lc_userphone">手机号码</string>
    <string name="lc_usertime">注册日期</string>
    <string name="lc_personalInfo">个人信息</string>
    <string name="lc_updateusername">修改用户名</string>
    <string name="lc_updateuserphone">更换手机号</string>
    <string name="lc_next">下一步</string>
    <string name="lc_update_toast">更换手机后，下次登录可使用新手机号登录。当前手机号：</string>
    <string name="lc_new_phone">请填写新的手机号</string>
    <string name="lc_new_brithday">年龄</string>
    <string name="lc_new_brithday_title">生日</string>
    <string name="lc_choceF_brithday_title">选择出生日期，系统将自动转换为年龄</string>
    <string name="lc_trainingaid_title">教具</string>
    <string name="lc_trainingaid_info">请勾选您现在持有的教具型号，如无法确认教具型号，请查看教具包装盒标注型号（可多选）。</string>
    <string name="lc_save">保存</string>
    <string name="slider_text">Slide to clean</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_lcnow_phone">LCNowPhone</string>
    <string name="title_activity_lccompany_info">LCCompanyInfo</string>
    <string name="mecode">我的二维码</string>
    <string name="mecode_sellClass">扫二维码 销课时</string>
    <string name="title_activity_lcme_lc_bean">我的乐豆</string>
    <string name="mebalance">余额</string>
    <string name="balancetask">乐豆任务</string>
    <string name="balancegift">乐豆换礼物</string>
    <string name="balanceconversion">乐豆兑换</string>
    <string name="balancedetail">乐豆明细</string>
    <string name="title_activity_lcmelc_bean_task">LCMelcBeanTask</string>
    <string name="title_activity_lcbean_conversion">LCBeanConversion</string>
    <string name="conversion">兑换</string>
    <string name="conversion_wrong">*兑换码不正确</string>
    <string name="title_activity_lcbean_detail">LCBeanDetail</string>
    <string name="all">全部</string>
    <string name="in">支出</string>
    <string name="out">收入</string>
    <string name="original">原创动画\n每周更新</string>
    <string name="interaction">互动播放\n记录成长</string>
    <string name="team">混龄团队\n线下教学</string>
    <string name="no_date">数据为空</string>
    <string name="feedback">意见反馈</string>
    <string name="idea">我们的进步离不开您的每一个建议与创意，期待您的心声！</string>
    <string name="chooseToFillIn">(选填)</string>
    <string name="submit">提交</string>
    <string name="dialog_warning">取消成功后课时(金额)将返回您的账户</string>
    <string name="dialog_reason">您取消的原因是：</string>
    <string name="dialog_reasonOne">时间计划临时有变</string>
    <string name="dialog_reasontwo">选择了其他更有趣的课程</string>
    <string name="dialog_reasonthree">我不想去了</string>
    <string name="dialog_reasonfour">校区安排有变</string>
    <string name="reason_other">其他原因</string>
    <string name="confirm_cancel">  确定取消  </string>
    <string name="submiting">正在提交...</string>
    <string name="thank_you_idea">感谢您的建议！</string>
    <string name="vip_why">为什么要成为</string>
    <string name="vip_how">如何成为</string>
    <string name="vip">会员</string>
    <string name="option1">参加线下团队课程</string>
    <string name="option2">享受更优惠的价格</string>
    <string name="option3">获取孩子成长报告</string>
    <string name="option4">还有更多...</string>
    <string name="how">具体详情请查找您附近的活动中心，咨询我们的工作人员。</string>
    <string name="wbo">官网：www.ledoing.com</string>
    <string name="weixin">微信：LECHIOME</string>
    <string name="phone">电话：400-0068-617</string>

    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
</resources>